--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="logIn.css">
+  <link rel="stylesheet" href="home.css">
     <style>
         body{
         background-image: url('stadium2.jpg');
@@ -13,12 +13,12 @@
 
         }
     </style>
-    <title>Title</title>
+    <title>home</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg background-color">
     <div class="container-fluid ">
-        <a class="navbar-brand  fs-6 fw-bold text-white" href="electionPage.html">signUp/login</a>
+        <a class="navbar-brand  fs-6 fw-bold text-white" href="login.html">signUp/login</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,14 +52,6 @@
         </div>
     </div>
 </nav>
-    <div class="form">
-<form method="get" action="./greeting">
-    <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname" value="John"><br>
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" value="Doe">
-    <input type="submit" value="login">
-</form>
-</div>
+
 </body>
 </html>
