--- a/src/main/webapp/electionPage.html
+++ b/src/main/webapp/electionPage.html
@@ -5,15 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="election.css">
     <style>
         body{
-
+            background-image: url('stadium2.jpg');
+            background-size: cover;
         }
     </style>
-    <title>Title</title>
+    <title>Election Team</title>
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg background-color">
+    <div class="container-fluid ">
+        <a class="navbar-brand  fs-6 fw-bold text-white" href="login.html">signUp/login</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active  fs-6 fw-bold text-white" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link  fs-6 fw-bold text-white" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle  fs-6 fw-bold text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        SHOP-products
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item text-white fs-6 fw-bold">
+                    <a class="nav-link text-white fs-6 fw-bold">calender</a>
+                </li>
+            </ul>
+            <form class="d-flex text-white" role="search">
+                <input class="form-control me-2 pd-5 " type="search" placeholder="Search" aria-label="Search">
+                <button class="btn text-white bg-secondary" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<form action="./greeting" method="post">
+<div class="back">
+    <p class="vstack gap-3 fw-bold">Which team will be the champion of the Premier League this season?</p>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheck1">
+        <label class="form-check-label" for="flexCheck1">
+            <p class="fw-bold">1)Perspolise Tehran</p>
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheck2">
+        <label class="form-check-label" for="flexCheck2">
+            <p class="fw-bold">2)Esteghlal Tehran</p>
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheck3">
+        <label class="form-check-label" for="flexCheck3">
+            <p class="fw-bold">3)TeraktorSazi Tabriz</p>
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flex4">
+        <label class="form-check-label" for="flex4">
+            <p class="fw-bold">4)Sepahan Esfahan</p>
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flex5">
+        <label class="form-check-label" for="flex5">
+            <p class="fw-bold">5)none of the above</p>
+        </label>
+    </div>
+    <div class="vstack gap-2 col-md-5 mx-auto">
+        <button type="button" class="btn btn-secondary">Submit</button>
+        <button type="button" class="btn btn-secondary">see vote</button>
+    </div>
+</div>
+</form>
 </body>
 </html>
