--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -27,7 +27,7 @@
                     <a class="nav-link active  fs-6 fw-bold text-white" aria-current="page" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  fs-6 fw-bold text-white" href="#">Link</a>
+                    <a class="nav-link  fs-6 fw-bold text-white" href="signUp.html">signup</a>
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle  fs-6 fw-bold text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -53,12 +53,13 @@
 </nav>
 <div class="form ">
     <form method="get" action="./greeting">
-        <label class="fw-bold" for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
-        <label class="fw-bold" for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br>
-        <input class="btnLogin fw-bold" type="submit" value="login" >
-
+<!--    <form method="get" action="http://localhost:8080/mohammad_sedghi_hw22_q4_maktab92_war_exploded/greeting">-->
+        <label class="fw-bold" for="fname">username:</label><br>
+        <input type="text" id="fname" name="fname" value="mohammad"><br>
+        <label class="fw-bold" for="lname">password:</label><br>
+        <input type="password" id="lname" name="lname" value="12345"><br>
+        <input class="btnLogin fw-bold" type="submit" value="login" ><br>
+         <a href="signUp.html" class="text-white fw-bold">signup</a>
     </form>
 </div>
 </body>
