--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -18,17 +18,17 @@
 <body>
 <nav class="navbar navbar-expand-lg background-color">
     <div class="container-fluid ">
-        <a class="navbar-brand  fs-6 fw-bold text-white" href="login.html">signUp/login</a>
+        <a class="navbar-brand  fs-6 fw-bold text-white" href="login.html">login</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active  fs-6 fw-bold text-white" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active  fs-6 fw-bold text-white" aria-current="page" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  fs-6 fw-bold text-white" href="#">Link</a>
+                    <a class="nav-link  fs-6 fw-bold text-white" href="signUp.html">signup</a>
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle  fs-6 fw-bold text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
